# MiptAlgorithmsProject

mipt/: 2sat.json  2sat.json~  2sat0.json  2sat0.json~  2sat1.json  2sat1.json~  2sat2.json  2sat2.json~  2sat3.json  2sat3.json~  Aho0.json  Aho0.json~  Aho1.json  Aho1.json~  CMakeCache.txt  CMakeLists.txt  ChangeLog.txt  Fenwick0.json  Fenwick0.json~  Makefile  ResultAho.txt  Transport.h  Transport.hpp  catch_inc.cpp  cmake_install.cmake  graph.json~  graph0.json~  graph1.json  graph2.json  graph3.json  graph3.json~  test.cpp  test.cpp~  transport0.json  transport0.json~  transport1.json  transport1.json~  transport2.json  transport2.json~
mipt/HashFunction/: HashFunction.cbp  hashFunction.cpp  hashFunction.h
mipt/agraph/: CMakeLists.txt  Makefile  agraph.cpp  agraph.cpp~  agraph.h  agraph.h~  agraph_export.h  cmake_install.cmake
mipt/jsoncpp/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
mipt/jsoncpp/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mipt/jsoncpp/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mipt/jsoncpp/src/lib_json/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mipt/safeConstr/: main.cpp  safeConstr.cbp  safeConstr.depend  safeConstr.h  safeConstr.h~
mipt/ukkonen/: main.cpp  ukkonen.cbp
